# romewyld

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: demo.csv  demo.html  demo.json  demo.md  index.html
examples/: sample_metadata.yaml  sample_resume.md
examples/materials/: tags.json
examples/materials/LinkedInExport/: Education.csv  Positions.csv  Profile.csv  Skills.csv
jobleads/: __init__.py  cli.py  config.py  http.py  llm.py  match.py  metadata.py
jobleads/sources/: __init__.py  arbeitnow.py  base.py  greenhouse.py  hackernews.py  remotive.py
romewyld/: __init__.py  cli.py  config.py  http.py  ingest.py  linkedin.py  llm.py  metadata.py  models.py  normalize.py  profile.py  report.py
romewyld/sources/: adzuna.py  ashby.py  jobicy.py  lever.py  remoteok.py  themuse.py  usajobs.py
tests/: test_ingest.py  test_match.py  test_profile.py  test_report.py  test_sources.py
