[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-leads"
version = "1.0.0"
description = "Turn a resume/CV + public metadata into ranked job-application leads"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
full = [
    "pyyaml>=6.0",
    "pdfplumber>=0.10",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
]
llm = ["anthropic>=0.40"]

[project.scripts]
jobleads = "jobleads.cli:main"

[tool.setuptools]
packages = ["jobleads", "jobleads.sources"]
